# Create strategy pattern for JSON resources # Update images # MapItem creation implementing Parcelable

--- a/app/src/main/res/layout/single_item.xml
+++ b/app/src/main/res/layout/single_item.xml
@@ -5,11 +5,13 @@
     <TableRow>
         <ImageView
             android:id="@+id/img"
+            android:layout_margin="10dp"
             android:layout_width="50dp"
             android:layout_height="50dp"/>
 
         <TextView
             android:id="@+id/txt"
+            android:layout_margin="10dp"
             android:layout_width="wrap_content"
             android:layout_height="50dp" />
         <!--TODO:show the categories below-->
