GI-006 - Implementation for bowling resources

--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -3,6 +3,7 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
+    <!--List View with all the resources offered-->
     <ListView
         android:id="@+id/listview"
         android:layout_width="fill_parent"
