--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -9,7 +9,7 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".services.MapsActivity" />
+        tools:context=".ui.activities.MapsActivity" />
 
     <Button android:id="@+id/resetButton"
         android:layout_width="wrap_content"
