GI-024 - Icons added for bus locations and bus stops - Showing blinking next stop - Avoid showing buses at home - Way to identify bus stops in map items - Added new DB support to get next stop - Logic to just draw chaging map items - Light UI change in ListView

--- a/app/src/main/res/layout/single_item.xml
+++ b/app/src/main/res/layout/single_item.xml
@@ -11,9 +11,11 @@
 
         <TextView
             android:id="@+id/txt"
-            android:layout_margin="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="15dp"
             android:layout_width="wrap_content"
-            android:layout_height="50dp" />
+            android:textSize="30dp"
+            android:layout_height="55dp" />
         <!--TODO:show the categories below-->
     </TableRow>
 </TableLayout>
